# shaderbox

./: CMakeLists.txt  vcpkg.json
src/: main.cc
src/res/: fragment.glsl  vertex.glsl
src/shader/: program.cc  program.hh
src/window/: window.cc  window.hh
